--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,6 +16,9 @@
   body {
     font-size: 1.8rem;
   }
+  header {
+    text-align: right;
+  }
   h1, h2, h3 {
     font-weight: normal;
   }
@@ -44,6 +47,7 @@
   }
 
   .website-nav {
+    display: inline-block;
     position: relative;
     padding: 5rem;
   }
@@ -61,7 +65,8 @@
   }
 
   .website-nav ul li a {
-    color: white;
+    color: #000;
+    font-size: 18px;
     text-decoration: none;
   }
 
@@ -124,6 +129,7 @@
     stroke-dashoffset: 4000;
     animation: dash 5s linear forwards;
   }
+
   @keyframes dash {
     to {
       stroke-dashoffset: 0;
@@ -131,45 +137,5 @@
   }
 
   @media (min-height: 500px) and (min-width: 700px) {
-    .message {
-      padding: 0;
-      width: 50%;
-      left: calc(50vw - 5rem);
-      top: calc(15vh - 5rem);
-    }
-    .message .text {
-      padding-right: 0rem;
-    }
-    .graphics {
-      display: block;
-      margin-bottom: 6rem;
-    }
-    .message .twitter-link img {
-      width: 70%;
-      height: 70%;
-    }
-    .page-content {
-      padding: 3rem 5rem;
-    }
-  }
 
-  @media (min-height: 500px) and (min-width: 1240px) {
-    .message {
-      left: calc(50vw - 10rem);
-      top: calc(25vh - 5rem);
-    }
-    h1 {
-      font-size: 5rem;
-    }
-    .message .twitter-link img {
-      width: 80%;
-      height: 80%;
-    }
   }
-
-  @media (min-aspect-ratio: 11/5)  {
-    .graphics {
-      display: none;
-    }
-  }
-
