--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -41,15 +41,20 @@
   }
   .headerImg {
     width: 100%;
-
   }
-
+  .navFrame{
+    display: inline-block;
+    vertical-align: middle;
+  }
   .wrapper {
     min-height: 100%;
     height: auto !important;
     height: 100%;
     margin: 0 auto -7rem;
     position: relative;
+  }
+  .fbIcon{
+    margin-top: -25px;
   }
 
   footer .footer-contents {
@@ -84,71 +89,34 @@
     text-decoration: none;
   }
 
-  .message {
-    position: relative;
-    padding: 0 5rem;
-    margin-bottom: 3rem;
-    width: auto;
-  }
-  .message .twitter-link {
-    float: left;
-    margin-right: 20px;
+  .website-nav ul li a:hover {
+    color: #DC9C35;
   }
 
-  .message .twitter-link img {
-    width: 40px;
-    height: 40px;
+  .content {
+    padding: 15px;
+    background-color: #e69900;
+    text-align: center;
   }
-
-  .message .text {
-    float: left;
+  .content h3{
+    font-weight: normal;
+    color: #FFF;
   }
-
-  .message:after, .website-nav:after {
-    content: " ";
-    display: table;
-    clear: both;
+  .carouselFrame {
+    background-color: #FFF;
   }
-  .graphics {
-    display: none;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    margin-bottom: 0;
+  .carouselImage {
+    width: 100%;
+    height: 450px;
+    text-align: -webkit-center;
   }
-  .graphics .tower svg {
-    width: calc(100vw);
-    height: calc(90vh);
+  .carouselArrow{
+    line-height: 450px;
   }
-
-  .graphics .cloud {
-    top: 30rem;
-    position: relative;
-
-  }
-  .page-content {
-    padding: 1rem 5rem;
-  }
-
-  .page-content p {
-    margin-bottom: 1rem;
-  }
-
-  .path {
-    stroke-dasharray: 4000;
-    stroke-dashoffset: 4000;
-    animation: dash 5s linear forwards;
-  }
-
-  @keyframes dash {
-    to {
-      stroke-dashoffset: 0;
-    }
-  }
-
   @media (min-width: 1200px) {
     .logo,
-    .website-nav {
+    .navFrame {
       width: calc(50% - 20px);
     }
+
   }
