--- a/src/css/agency.css
+++ b/src/css/agency.css
@@ -150,10 +150,11 @@ fieldset[disabled] .btn-xl.active {
   background-color: #222222;
   border-color: transparent;
 }
-.navbar-custom .navbar-brand {
-  color: #fed136;
-  font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
-}
+/*.navbar-custom .navbar-brand {
+  width: 145px;
+  height: 249px;
+  background-image: url('../img/vLogo.png');
+}*/
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .navbar-brand:active,
@@ -176,11 +177,12 @@ fieldset[disabled] .btn-xl.active {
   background-color: #fed136;
 }
 .navbar-custom .nav li a {
+  font-size: 14pt;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 400;
   letter-spacing: 1px;
-  color: white;
+  color: #FFF;
 }
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
@@ -198,6 +200,9 @@ fieldset[disabled] .btn-xl.active {
   background-color: #fec503;
 }
 @media (min-width: 768px) {
+  .navbar-custom .nav li a {
+    color: #000;
+  }
   .navbar-custom {
     background-color: transparent;
     padding: 25px 0;
@@ -215,10 +220,8 @@ fieldset[disabled] .btn-xl.active {
   .navbar-custom .navbar-nav > .active > a {
     border-radius: 3px;
   }
-}
-@media (min-width: 768px) {
   .navbar-custom.affix {
-    background-color: #222222;
+    background-color: #FFF;
     padding: 10px 0;
   }
   .navbar-custom.affix .navbar-brand {
@@ -226,7 +229,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/header-bg.jpg');
+  background-image: url('../img/header.png');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -238,47 +241,23 @@ header {
   color: white;
 }
 header .intro-text {
-  padding-top: 100px;
-  padding-bottom: 50px;
+  padding-top: 140px;
+  padding-bottom: 10px;
 }
-header .intro-text .intro-lead-in {
-  font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-style: italic;
-  font-size: 22px;
-  line-height: 22px;
-  margin-bottom: 25px;
-}
-header .intro-text .intro-heading {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 50px;
-  line-height: 50px;
-  margin-bottom: 25px;
-}
+
 @media (min-width: 768px) {
+  .navbar-custom .navbar-brand {
+    width: 100px;
+    height: 171px;
+    background-image: url('../img/vLogo-sm.png');
+  }
   header .intro-text {
     padding-top: 300px;
-    padding-bottom: 200px;
-  }
-  header .intro-text .intro-lead-in {
-    font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-style: italic;
-    font-size: 40px;
-    line-height: 40px;
-    margin-bottom: 25px;
-  }
-  header .intro-text .intro-heading {
-    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 75px;
-    line-height: 75px;
-    margin-bottom: 50px;
+    padding-bottom: 50px;
   }
 }
 section {
-  padding: 100px 0;
+  padding: 40px 0px 60px 0px;
 }
 section h2.section-heading {
   font-size: 40px;
@@ -295,7 +274,7 @@ section h3.section-subheading {
 }
 @media (min-width: 768px) {
   section {
-    padding: 150px 0;
+    padding: 80px 0;
   }
 }
 .service-heading {
@@ -495,6 +474,15 @@ section h3.section-subheading {
   }
 }
 @media (min-width: 992px) {
+  .navbar-custom .navbar-brand {
+    width: 145px;
+    height: 249px;
+    background-image: url('../img/vLogo.png');
+  }
+  header .intro-text {
+    padding-top: 430px;
+    padding-bottom: 50px;
+  }
   .timeline > li {
     min-height: 150px;
   }
