--- a/src/css/agency.css
+++ b/src/css/agency.css
@@ -249,7 +249,9 @@ header .intro-text {
 /*  padding-top: 140px;
   padding-bottom: 10px;*/
 }
-
+header .intro-text .underImg{
+  margin-top: 400px;
+}
 @media (min-width: 768px) {
   .navbar-custom .navbar-brand {
     width: 100px;
@@ -259,6 +261,9 @@ header .intro-text {
   header .intro-text {
     padding-top: 300px;
     padding-bottom: 50px;
+  }
+  header .intro-text .underImg{
+    margin-top: 300px;
   }
 }
 section {
@@ -548,6 +553,7 @@ aside.clients img {
   margin: 50px auto;
 }
 section#contact {
+  margin-top: 50px;
   background-color: #222222;
   background-image: url('../img/map-image.png');
   background-position: center;
@@ -577,27 +583,27 @@ section#contact ::-webkit-input-placeholder {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
-  color: #eeeeee;
+  color: #ccc;
 }
 section#contact :-moz-placeholder {
   /* Firefox 18- */
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
-  color: #eeeeee;
+  color: #ccc;
 }
 section#contact ::-moz-placeholder {
   /* Firefox 19+ */
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
-  color: #eeeeee;
+  color: #ccc;
 }
 section#contact :-ms-input-placeholder {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
-  color: #eeeeee;
+  color: #ccc;
 }
 section#contact .text-danger {
   color: #e74c3c;
