--- a/src/css/agency.css
+++ b/src/css/agency.css
@@ -250,6 +250,8 @@ header .intro-text {
   padding-bottom: 10px;*/
 }
 header .intro-text .underImg{
+  width: 100%;
+  max-width: 400px;
   margin-top: 400px;
 }
 @media (min-width: 768px) {
