--- a/src/css/agency.css
+++ b/src/css/agency.css
@@ -225,9 +225,8 @@ fieldset[disabled] .btn-xl.active {
     padding: 10px 0;
   }
   .navbar-custom.affix .navbar-brand {
-    font-size: 1.5em;
-    width: 177px;
-    height: 100px;
+    width: 253px;
+    height: 120px;
     background-image: url('../img/logo.png');
   }
 
@@ -285,9 +284,9 @@ section h3.section-subheading {
   margin-bottom: 75px;
 }
 @media (min-width: 768px) {
-  section {
+  /*section {
     padding: 80px 0;
-  }
+  }*/
 }
 .service-heading {
   margin: 15px 0;
