--- a/src/css/agency.css
+++ b/src/css/agency.css
@@ -352,6 +352,13 @@ section h3.section-subheading {
 #portfolio * {
   z-index: 2;
 }
+
+.product-title{
+  font-size: 28px;
+  color: #9A5D2D;
+  background-color: rgba(154, 93, 45, 0.3);
+}
+
 @media (min-width: 767px) {
   #portfolio .portfolio-item {
     margin: 0 0 30px;
@@ -453,6 +460,14 @@ section h3.section-subheading {
 .timeline .timeline-body > ul {
   margin-bottom: 0;
 }
+.buy-button{
+  background-color: #BE9067;
+  color: #FFF;
+}
+.buy-button:hover{
+  color: #ccc;
+}
+
 @media (min-width: 768px) {
   .timeline:before {
     left: 50%;
@@ -484,7 +499,8 @@ section h3.section-subheading {
     padding: 0 30px 20px 20px;
   }
 }
-.about-us-title{
+.about-us-title,
+.product-descipt-title{
   font-size: 24px;
   color: #B68C52;
   border-bottom: 1px solid #B68C52;
@@ -701,7 +717,7 @@ ul.social-buttons li a:active {
   box-shadow: none;
   border: none;
   min-height: 100%;
-  padding: 100px 0;
+  padding: 10px 0;
   text-align: center;
 }
 .portfolio-modal .modal-content h2 {
@@ -725,9 +741,9 @@ ul.social-buttons li a:active {
   margin-bottom: 30px;
 }
 .portfolio-modal .close-modal {
-  position: absolute;
-  width: 75px;
-  height: 75px;
+  /*position: absolute;*/
+  width: 30px;
+  height: 30px;
   background-color: transparent;
   top: 25px;
   right: 25px;
@@ -737,7 +753,7 @@ ul.social-buttons li a:active {
   opacity: 0.3;
 }
 .portfolio-modal .close-modal .lr {
-  height: 75px;
+  height: 30px;
   width: 1px;
   margin-left: 35px;
   background-color: #222222;
@@ -749,7 +765,7 @@ ul.social-buttons li a:active {
   z-index: 1051;
 }
 .portfolio-modal .close-modal .lr .rl {
-  height: 75px;
+  height: 30px;
   width: 1px;
   background-color: #222222;
   transform: rotate(90deg);
